fixed some bugs and made code improvements